[project]
name = "compiler-explorer-mcp"
version = "0.1.2"
description = "MCP server allowing LLMs to interact remotely with compilers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Anthropic", email = "mcp-support@anthropic.com" }
]
keywords = ["compiler", "explorer", "mcp", "llm", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.397",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[project.urls]
Homepage = "https://github.com/anthropic/compiler-explorer-mcp"
Repository = "https://github.com/anthropic/compiler-explorer-mcp"
Documentation = "https://github.com/anthropic/compiler-explorer-mcp#readme"
"Bug Tracker" = "https://github.com/anthropic/compiler-explorer-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]

[project.scripts]
compiler-explorer-mcp = "server:mcp.run"
